--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
@@ -6,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>María Julia Ugarte Malnis | Mediumnidad • Tarot • Péndulo • Registros Akáshicos</title>
-  <meta name="description" content="Sesiones de Mediumnidad, Tarot, Péndulo y Registros Akáshicos. Reservá tu turno por WhatsApp o Instagram." />
+  <meta name="description" content="Sesiones de Mediumnidad, Tarot, Péndulo y Registros Akáshicos. Reservá tu turno por Instagram." />
 
   <!-- Open Graph -->
   <meta property="og:title" content="María Julia Ugarte Malnis | Mediumnidad • Tarot • Péndulo • Registros Akáshicos" />
@@ -253,10 +252,6 @@
       user-select:none;
     }
     .btn:hover{transform: translateY(-1px); background: rgba(255,255,255,.14); border-color: rgba(255,255,255,.26)}
-    .btn.whats{
-      background: linear-gradient(135deg, rgba(49,208,170,.26), rgba(155,123,255,.18));
-      border-color: rgba(49,208,170,.28);
-    }
     .btn.ig{
       background: linear-gradient(135deg, rgba(255,91,214,.26), rgba(155,123,255,.18));
       border-color: rgba(255,91,214,.26);
@@ -448,7 +443,6 @@
       transition: transform .18s ease;
     }
     .fab a:hover{transform: translateY(-2px)}
-    .fab .w{background: linear-gradient(135deg, rgba(49,208,170,.26), rgba(255,255,255,.06)); border-color: rgba(49,208,170,.28)}
     .fab .i{background: linear-gradient(135deg, rgba(255,91,214,.26), rgba(255,255,255,.06)); border-color: rgba(255,91,214,.26)}
     .fab img{width:22px; height:22px; display:block; object-fit:contain; filter: drop-shadow(0 8px 16px rgba(0,0,0,.25));}
 
@@ -616,18 +610,11 @@
               </p>
 
               <div class="ctaRow">
-                <a class="btn whats" id="ctaWhats" href="#" rel="noopener">
-                  <span class="btnIcon" aria-hidden="true">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="" />
-                  </span>
-                  Reservar por WhatsApp
-                </a>
-
                 <a class="btn ig" id="ctaIg" href="#" rel="noopener">
                   <span class="btnIcon" aria-hidden="true">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="" />
                   </span>
-                  Consultar por Instagram
+                  Reservar por Instagram
                 </a>
               </div>
 
@@ -638,7 +625,7 @@
             </div>
 
             <div class="hint">
-              <b>Nota:</b> este es un template listo para adaptar. Cambiá textos, links, y tu número/usuario.
+              <b>Nota:</b> este es un template listo para adaptar. Cambiá textos y tu usuario.
             </div>
           </div>
         </div>
@@ -708,7 +695,7 @@
       <p class="lead">Simple y directo: coordinamos el turno, definimos el foco y hacemos la sesión.</p>
 
       <div class="steps">
-        <div class="step"><div class="num">01 • Consulta</div><h3>Me escribís</h3><p>Por WhatsApp o Instagram. Me contás brevemente qué te está pasando y qué querés trabajar.</p></div>
+        <div class="step"><div class="num">01 • Consulta</div><h3>Me escribís</h3><p>Por Instagram. Me contás brevemente qué te está pasando y qué querés trabajar.</p></div>
         <div class="step"><div class="num">02 • Turno</div><h3>Coordinamos horario</h3><p>Te paso disponibilidad y elegimos el momento. (Modalidad online / por turno).</p></div>
         <div class="step"><div class="num">03 • Sesión</div><h3>Trabajamos el foco</h3><p>La sesión se orienta a claridad y próximos pasos. Si querés, te dejo un resumen.</p></div>
       </div>
@@ -775,7 +762,7 @@
       <p class="lead">Dejá todo claro acá para filtrar consultas repetidas y llegar directo al turno.</p>
 
       <div class="faq">
-        <details><summary>¿Cómo reservo? <span>+</span></summary><p>Me escribís por WhatsApp o Instagram, te paso disponibilidad y coordinamos el turno.</p></details>
+        <details><summary>¿Cómo reservo? <span>+</span></summary><p>Me escribís por Instagram, te paso disponibilidad y coordinamos el turno.</p></details>
         <details><summary>¿Es presencial u online? <span>+</span></summary><p>Podemos coordinar online. Si trabajás presencial, reemplazá este texto por tu ubicación y horarios.</p></details>
         <details><summary>¿Cuánto dura la sesión? <span>+</span></summary><p>Depende del servicio. Podés indicar duración aproximada o aclarar que se define al coordinar.</p></details>
         <details><summary>¿Qué tengo que preparar? <span>+</span></summary><p>Solo un lugar tranquilo y una idea de lo que querés trabajar. Si estás confundida, lo ordenamos juntas.</p></details>
@@ -799,28 +786,20 @@
           </div>
 
           <div class="sendRow">
-            <a class="btn whats" id="sendWhats" href="#" rel="noopener">
-              <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="" /></span>
-              Enviar por WhatsApp
-            </a>
             <a class="btn ig" id="sendIg" href="#" rel="noopener">
               <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="" /></span>
               Enviar por Instagram
             </a>
           </div>
 
-          <div class="hint">Tip: este formulario no “envía” mails: arma el mensaje y lo abre en WhatsApp/IG para que la charla siga ahí.</div>
+          <div class="hint">Tip: este formulario no “envía” mails: te abre Instagram para que la charla siga ahí.</div>
         </div>
 
         <div class="contactCard">
-          <h3 style="margin:0; font-size:14px;">Links directos</h3>
+          <h3 style="margin:0; font-size:14px;">Link directo</h3>
           <p style="margin:8px 0 0; color: rgba(244,243,255,.82); font-size:13px; line-height:1.55;">Si preferís, tocá directo:</p>
 
           <div class="ctaRow" style="margin-top:12px">
-            <a class="btn whats" id="directWhats" href="#" rel="noopener">
-              <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="" /></span>
-              WhatsApp
-            </a>
             <a class="btn ig" id="directIg" href="#" rel="noopener">
               <span class="btnIcon" aria-hidden="true"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="" /></span>
               Instagram
@@ -839,9 +818,6 @@
   </main>
 
   <div class="fab" aria-label="Accesos rápidos">
-    <a class="w" id="fabWhats" href="#" rel="noopener" aria-label="WhatsApp">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
-    </a>
     <a class="i" id="fabIg" href="#" rel="noopener" aria-label="Instagram">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
     </a>
@@ -866,41 +842,16 @@
   </div>
 
   <script>
-    const WHATSAPP_NUMBER = "5491112345678";
-
     // DEMO: Instagram deriva a tu cuenta
     const INSTAGRAM_USER = "ciborg347";
 
-    const BASE_MSG = "Hola Julia! 🙌 Quiero reservar una sesión. Te cuento brevemente:";
-
-    function enc(v){ return encodeURIComponent(v || ""); }
-    function whatsappLink(text){ return "https://wa.me/" + WHATSAPP_NUMBER + "?text=" + enc(text); }
     function instagramLink(){ return "https://instagram.com/" + INSTAGRAM_USER; }
-
-    function buildMsg(){
-      const nombre = document.getElementById("nombre").value.trim();
-      const motivo = document.getElementById("motivo").value.trim();
-      let msg = BASE_MSG;
-      if(nombre) msg += "\n\nNombre: " + nombre;
-      if(motivo) msg += "\nMotivo: " + motivo;
-      msg += "\n\n¿Tenés disponibilidad esta semana?";
-      return msg;
-    }
-
-    const directWhats = whatsappLink(BASE_MSG + "\n\n¿Tenés disponibilidad esta semana?");
-    document.getElementById("ctaWhats").href = directWhats;
-    document.getElementById("directWhats").href = directWhats;
-    document.getElementById("fabWhats").href = directWhats;
 
     const ig = instagramLink();
     document.getElementById("ctaIg").href = ig;
     document.getElementById("directIg").href = ig;
     document.getElementById("fabIg").href = ig;
 
-    document.getElementById("sendWhats").addEventListener("click", function(e){
-      e.preventDefault();
-      window.open(whatsappLink(buildMsg()), "_blank");
-    });
     document.getElementById("sendIg").addEventListener("click", function(e){
       e.preventDefault();
       window.open(ig, "_blank");
@@ -957,4 +908,3 @@
   </script>
 </body>
 </html>
-```
